# african-stores-agent

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  PROMPT.md  README.md  SECURITY.md  SKILLS.md  TODO.md  agent.py  config.py  cost_tracking.py  crawl_tracker.py  eval-loop-ci.patch  eval_agents.py  eval_report.json  extractor.py  generator.py  gitignore  models.py  pending_review.py  pipeline.py  provinces.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_supervisor.py  storage.py  storage_mongo.py  storage_sqlite.py  supervisor.py  test_supervisor.py  tools.py  tools_search.py  tools_storage.py  tools_validator.py
.cursor/: rules
.github/: dependabot.yml
.github/workflows/: codeql.yml  crawl.yml  security.yml  triage.yml
docs/: bedrock-iam-policy.json
scripts/: migrate_sqlite_to_mongo.py
